Added sql to plane